use FromQuery for sdocIds in GetDocumentsFromList; updated swagger
